<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
    <string name="app_name">Sunshine</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_forecast_detail">Details</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_location_title">Location</string>
    <string name="pref_units_title">Temperature units</string>
    <string name="pref_units_key" translatable="false">pref_units</string>
    <string name="pref_location_key" translatable="false">pref_location</string>
    <string name="pref_units_dialog_title">Pick your Units</string>
    <string name="pref_location_default" translatable="false">95134</string>
    <string name="pref_units_default" translatable="false">metric</string>
    <string name="pref_units_imperial" translatable="false">imperial</string>
    <string name="pref_units_metric" translatable="false">metric</string>
    <string name="pref_notification_title">Notification</string>
    <string name="pref_notification_key" translatable="false">pref_notification</string>
    <string name="pref_notification_summary_on" translatable="false">Weather notification is On</string>
    <string name="pref_notification_summary_off" translatable="false">Weather notification is Off</string>
    <string name="pref_enable_notifications_default" translatable="false">true</string>
    <string name="action_view_loc_on_map">View Location on Map</string>
    <string name="action_share">Share</string>
    <!-- Date label when displaying today's weather forecast [CHAR LIMIT=20] -->
    <string name="today">Today</string>

    <!-- Date label when displaying tomorrow's weather forecast [CHAR LIMIT=20] -->
    <string name="tomorrow">Tomorrow</string>

    <!-- Date format for displaying day of week and date (i.e. Mon Jun 1) [CHAR LIMIT=20] -->
    <string name="format_full_friendly_date"><xliff:g id="day">%1$s</xliff:g>, <xliff:g id="date">%2$s</xliff:g></string>

    <!-- Temperature formats in degrees [CHAR LIMIT=NONE] -->
    <string name="format_temperature"><xliff:g id="temp">%1.0f</xliff:g>\u00B0</string>

    <!-- Strings for formatting weather-related data -->
    <!-- Windspeed formats -->
    <!-- Wind in mph [CHAR LIMIT=25] -->
<string name="format_wind_mph">Wind: <xliff:g id="speed">%1$1.0f</xliff:g> mph <xliff:g id="direction">%2$s</xliff:g>
</string>

    <!-- Wind in kph [CHAR LIMIT=25] -->
<string name="format_wind_kmh">Wind: <xliff:g id="speed">%1$1.0f</xliff:g> km/h <xliff:g id="direction">%2$s</xliff:g>
</string>

    <!-- Pressure format CHAR LIMIT=25] -->
    <string name="format_pressure">Pressure: <xliff:g id="pressure">%1.0f</xliff:g> hPa</string>

    <!-- Humidity format CHAR LIMIT=25]-->
    <string name="format_humidity">Humidity: <xliff:g id="humidity">%1.0f</xliff:g> %%</string>
    <!-- Account type (for sync-adapter authenticator) -->
    <!-- SyncAdapter related -->
    <string name="sync_account_type">sunshine.pbabu.com</string>
    <string name="content_authority">com.example.pbabu.sunshine.app</string>

    <!-- Notification Format -->
    <string name="format_notification">
    Forecast: <xliff:g id="condition">%1$s</xliff:g> High: <xliff:g id="high">%2$s</xliff:g> Low: <xliff:g id="low">%3$s</xliff:g>
    </string>
    <!-- Strings related to Notification preference -->
    <string name="pref_last_notification">last_notification</string>

    <!-- Empty view string  -->
    <string name="empty_view">No weather information available<xliff:g id="reason">%1$s</xliff:g></string>

    <!-- pref key for storing last sync location status -->
    <string name="pref_last_sync_location_status">last_sync_status</string>
</resources>
