<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <EditTextPreference
        android:key="@string/pref_location_key"
        android:title="@string/pref_location_title"
        android:defaultValue="@string/pref_location_default"
        android:summary="95134"
        android:singleLine="true"/>
    <ListPreference
        android:key="@string/pref_units_key"
        android:title="@string/pref_units_title"
        android:defaultValue="@string/pref_units_default"
        android:dialogTitle="@string/pref_units_dialog_title"
        android:entries="@array/pref_units_entries"
        android:entryValues="@array/pref_units_values"/>
    <CheckBoxPreference android:key="@string/pref_notification_key"
        android:title="@string/pref_notification_title"
        android:summaryOn="@string/pref_notification_summary_on"
        android:summaryOff="@string/pref_notification_summary_off"
        android:defaultValue="@string/pref_enable_notifications_default"/>
</PreferenceScreen>